--- a/ajax/ajax.html
+++ b/ajax/ajax.html
@@ -5,9 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Ajax</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="ajax.js"></script>
 </head>
 <body>
-  <ul id="demo"></ul>
+  <table id="demo">
+  </table>
+  <script src="ajax.js"></script>
 </body>
 </html>
