--- a/ajax/ajax.html
+++ b/ajax/ajax.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Ajax</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
+
 <body>
-  <table id="demo">
-  </table>
+  <div class="flex">
+    <div>
+      <h2>List of completed course</h2>
+      <table id="completed"></table>
+    </div>
+    <div>
+      <h2>List of incomplete course</h2>
+      <table id="incomplete"></table>
+    </div>
+  </div>
   <script src="ajax.js"></script>
 </body>
+
 </html>
