--- a/class/if_condition.html
+++ b/class/if_condition.html
@@ -21,36 +21,22 @@
                 valueType = Number(getValue);
                 if (valueType > 100) {
                     alert('Please enter proper digits (use max value)');
-                } 
-                else if (valueType == 100) {
+                } else if (valueType == 100) {
                     alert('Gread A+');
-                } 
-                else if (valueType >= 90) {
+                } else if (valueType >= 90) {
                     alert('Gread A');
-                } 
-                else if (valueType >= 80) {
+                } else if (valueType >= 80) {
                     alert('Gread B');
-                }
-                else if (valueType >= 70) {
+                } else if (valueType >= 70) {
                     alert('Gread C');
-                }
-                else if (valueType >= 60) {
+                } else if (valueType >= 60) {
                     alert('Gread D');
-                }
-                else if (valueType >= 50) {
+                } else if (valueType >= 50) {
                     alert('Gread E');
-                }
-                else if (valueType >= 35) {
+                } else if (valueType >= 35) {
                     alert('Gread E');
-                }
-                else if (valueType < 35) {
+                } else (valueType <= 34) {
                     alert('Fail');
-                } 
-                else if (valueType == NaN) {
-                    alert('your value is not number');
-                } 
-                else{
-                    alert('Enter digits value');  
                 }
             } else {
                 alert('Please enter proper digits (use char)');    
