--- a/class/or-spacial.html
+++ b/class/or-spacial.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <script>
+  <!-- <script>
     let subjectData;
     // const subjectData = {
     //   marathi: 25,
@@ -35,6 +35,50 @@
     const getData = subjectData || defaultSubData || {marathi: 'NA',english: 'NA',hindi: 'NA', maths: 'NA',science: 'NA'};
     console.log(getData);
 
+  </script> -->
+  <script>
+    for (let i = 1; i <= 5; i++) {
+      let string="";
+    //let space="";
+        // for (let q = 5; q >= i; q--) {
+        //   space += " ";
+        // }
+        for (let j = 1; j <= i; j++) {
+          string += i;
+        }
+			  console.log(string);
+        // console.log(space + string);
+        string="";
+    }
+  // for(let i=1; i <= 5; i++)
+  //  {
+  //   for(let j=1; j<i; j++)
+  //     {
+  //       document.write(i);
+  //     }
+  //   document.write('<br/>');
+  //  }
+    let number = prompt('Enter 1 to 15 between number'),
+        even = '', 
+        odd = '';
+    for (let p = 1;p <= number;p++){
+      if (p % 2 == 0){
+        even += p + ',';
+      } else {
+        odd += p + ',';
+      }
+    }
+    console.log(`even numbers = ${even}`);
+    console.log(`odd numbers = ${odd}`);
+    var test = 10;
+    (() => {
+      const test = 15;
+        (() => {
+          // let test = 20;
+          console.log(test);
+          console.log(window.test);
+        })();
+    }) ();
   </script>
 </body>
 </html>
