--- a/session/assignment test/index.html
+++ b/session/assignment test/index.html
@@ -20,6 +20,8 @@
       </thead>
       <tbody id="printData"></tbody>
     </table>
+    <hr>
+    <div id="printNum"></div>
     <script src="./main.js"></script>
   </body>
 </html>
